Make all stylesheet changes do an async style reresolve, not a sync one.  Bug 314776, r+sr=dbaron