layout/base/nsIPresShell.h
@@ -91,8 +91,8 @@ class nsCSSFrameConstructor;
 class nsISelection;
 
 #define NS_IPRESSHELL_IID     \
-{ 0x8be1b911, 0x7a04, 0x44e8, \
- { 0xaf, 0xaa, 0x17, 0x77, 0x26, 0x91, 0x8c, 0x19 } }
+{ 0x759ceea6, 0x52c1, 0x4a39, \
+ { 0x9f, 0xca, 0x1d, 0xf9, 0x9f, 0x40, 0xc9, 0xd3 } }
 
 // Constants uses for ScrollFrameIntoView() function
 #define NS_PRESSHELL_SCROLL_TOP      0
@@ -209,7 +209,12 @@ public:
   /*
    * Called when stylesheets are added/removed/enabled/disabled to rebuild
    * all style data for a given pres shell without necessarily reconstructing
-   * all of the frames.
+   * all of the frames.  This will not reconstruct style synchronously; if
+   * you need to do that, call FlushPendingNotifications to flush out style
+   * reresolves.
+   * // XXXbz why do we have this on the interface anyway?  The only consumer
+   * is calling AddOverrideStyleSheet/RemoveOverrideStyleSheet, and I think
+   * those should just handle reconstructing style data...
    */
   virtual NS_HIDDEN_(void) ReconstructStyleDataExternal();
   NS_HIDDEN_(void) ReconstructStyleDataInternal();
@@ -672,6 +677,7 @@ public:
                                  PRInt32 aIndent = 0) = 0;
 
   virtual void ListStyleSheets(FILE *out, PRInt32 aIndent = 0) = 0;
+  virtual void VerifyStyleTree() = 0;
 #endif
 
   PRBool IsAccessibilityActive() { return mIsAccessibilityActive; }
@@ -717,6 +723,7 @@ protected:
   nsWeakPtr                 mForwardingContainer;
 
   PRPackedBool              mStylesHaveChanged;
+  PRPackedBool              mDidInitialReflow;
 
 #ifdef ACCESSIBILITY
   /**
